# rebble-mobile-old

./: .packages  README.md
android/: local.properties
android/app/: build.gradle
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner.xcodeproj/: project.pbxproj
lib/: route_generator.dart
lib/features/presentation/pages/: *.dart  home_page.dart
lib/features/presentation/themes/: theme_factory.dart
lib/features/presentation/widgets/: bottom_nav.dart
rebble_mobile/: README.md  pubspec.yaml
rebble_mobile/ios/Runner/: Info.plist
rebble_mobile/lib/: main.dart
rusty_libpebble2/: README.md
rusty_libpebble2/android/: .project  settings.gradle
rusty_libpebble2/android/app/: build.gradle
rusty_libpebble2/android/gradle/wrapper/: gradle-wrapper.properties
rusty_libpebble2/android/rusty-libpebble2-lib/: .project
rusty_libpebble2/flutter/: README.md  pubspec.yaml
rusty_libpebble2/flutter/android/: .project  build.gradle  settings.gradle
rusty_libpebble2/flutter/android/rusty-libpebble2-lib-release/: build.gradle  (+1 more)
rusty_libpebble2/flutter/example/: README.md  pubspec.yaml
rusty_libpebble2/flutter/ios/: rusty_libpebble2.podspec  rusty_libpebble2_lib.podspec
rusty_libpebble2/flutter/lib/: rusty_libpebble2.dart  rusty_libpebble2_lib.dart
rusty_libpebble2/flutter/test/: rusty_libpebble2_lib_test.dart  rusty_libpebble2_test.dart
rusty_libpebble2/rust/: Cargo.toml
rusty_libpebble2/rust/scripts/: android_build.sh  ios_build.sh
rusty_libpebble2/rust/src/: android.rs  lib.rs
test/: widget_test.dart
(+40 files in other folders)
